- Handle dossier activation through RESTAPI. [njohner]
- Improve error message when trying to delete a referenced document. [njohner]
- Handle dossier deactivation through RESTAPI. [njohner]
- Fix bug with resolving a reopened dossier. [njohner]
- Update documentation for SaaS deployment update. [njohner]
- Correctly handle dossier reactivation through RESTAPI. [njohner]
- Extend task API serialization with responses data. [phgross]


2019.2.3 (2019-06-04)
---------------------

- Drop no longer working oneoffixx upgrade. [deiferni]


2019.2.2 (2019-05-27)
---------------------

- Fix revoke_permission field and validation in the fowarding forms. [phgross]
- Hide byline for the teams. [phgross]
- Cleanup/fix oneoffix upgradesteps and make dicstorage upgrades more failsafe. [phgross]
- Add french translation for spv documentation. [andresoberhaensli, njohner]
- Add french translation for task documentation. [andresoberhaensli, njohner]
- Allow viewing closed meeting when meeting dossier is closed. [njohner]


2019.2.1 (2019-05-21)
---------------------

- Show filters also on no contents page in document listings. [phgross]
- Make subject column non-sortable in storred dictstorage settings. [phgross]


2019.2.0 (2019-05-16)
---------------------

- Use the new split off registry configuration in the Oneoffixx API client. [Rotonen]
- Fix parent-link styling in the userdetails view. [phgross]
- Use smaller or equal in time window checking for nightly runner. [njohner]
- Nightly jobs: Also log exceptions to logfile, not just Sentry. [lgraf]
- Set 90px as a minimum instead of fixed height for description-like widgets. [lgraf]
- Fix resolving of multi-adminunit tasks. [phgross]
- Fix the setting of the content-type for Oneoffixx templates. [Rotonen]
- Concistently use "déroulement standard" for tasktemplates in French. [njohner]
- Update and add missing French translations. [njohner, andresoberhaensli]
- Update favorite-icon after cancel a document checkout. [phgross]