@@ -341,6 +341,28 @@ class TestListingEndpoint(IntegrationTestCase):
             [filename for filename in filenames if filename.endswith('.docx')],
             [item['filename'] for item in browser.json['items']])
 
+    @browsing
+    def test_filter_by_document_type(self, browser):
+        self.login(self.regular_user, browser=browser)
+
+        # all documents
+        view = '@listing?name=documents&columns:list=title&columns:list=start'
+        browser.open(self.repository_root, view=view, headers=self.api_headers)
+        number_of_documents = len(browser.json['items'])
+
+
+        # filtered on document_type
+        view = ('@listing?name=documents&'
+                'columns:list=title&columns:list=start'
+                '&filters.document_type:record:list=contract')
+        browser.open(self.repository_root, view=view, headers=self.api_headers)
+
+        self.assertNotEqual(number_of_documents, len(browser.json['items']))
+        self.assertEqual(1, len(browser.json['items']))
+        item = browser.json['items'][0]
+        self.assertEqual(self.document.absolute_url(), item['@id'])
+        self.assertEqual(self.document.title, item['title'])
+
 
 class TestListingEndpointWithSolr(IntegrationTestCase):
 
@@ -418,3 +440,16 @@ class TestListingEndpointWithSolr(IntegrationTestCase):
 
         filters = self.conn.search.call_args[0][0]['filter']
         self.assertIn(u'file_extension:(.docx)', filters)
+
+    @browsing
+    def test_filter_by_document_type(self, browser):
+        self.login(self.regular_user, browser=browser)
+
+        view = ('@listing?name=documents&columns:list=title'
+                '&columns:list=start'
+                '&filters.document_type:record:list=contract')
+        browser.open(self.repository_root, view=view,
+                     headers={'Accept': 'application/json'})
+
+        filters = self.conn.search.call_args[0][0]['filter']
+        self.assertIn(u'document_type:(contract)', filters)
